# MyTerrsetImprovement

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md  setup_deps.bat
include/: ChartWidget.h  Database.h  GdalIO.h  MainWindow.h  MapCanvas.h  ModelerSession.h  ModelerTab.h  ModelerWizard.h  Module.h  ModuleDialog.h  ModuleRegistry.h  Parameter.h  Pipeline.h  Raster.h  RasterInfoPanel.h
include/modelers/: EtmWizard.h  GeOsirisWizard.h  HbmWizard.h  LcmWizard.h
packaging/: deploy_windows.cmake
src/core/: CMakeLists.txt  Database.cpp  Module.cpp  ModuleRegistry.cpp  Parameter.cpp  Pipeline.cpp  Raster.cpp  RasterMetadata.cpp
src/gui/: CMakeLists.txt  ChartWidget.cpp  MainWindow.cpp  MapCanvas.cpp  ModelerTab.cpp  ModelerWizard.cpp  ModuleDialog.cpp  RasterInfoPanel.cpp  main.cpp
src/gui/modelers/: EtmAnalysisTab.cpp  EtmExploreTab.cpp  EtmPreprocessTab.cpp  EtmWizard.cpp  GeOsirisWizard.cpp  GeoExternalFactorsTab.cpp  GeoInputImagesTab.cpp  GeoModelParamsTab.cpp  GeoOpportunityCostTab.cpp  GeoOutputParamsTab.cpp  GeoProjectParamsTab.cpp  GeoReddRulesTab.cpp  HbmBiodiversityTab.cpp  HbmLandscapeTab.cpp  HbmPlanningTab.cpp  HbmSpeciesTab.cpp  HbmWizard.cpp  LcmChangeAnalysisTab.cpp  LcmChangePredictionTab.cpp  LcmHarmonizeTab.cpp  LcmPlanningTab.cpp  LcmReddTab.cpp  LcmTransitionPotentialsTab.cpp  LcmWizard.cpp
src/io/: CMakeLists.txt  GdalIO.cpp
src/modules/: CMakeLists.txt
src/modules/ccam/: CMakeLists.txt  ClimateAdaptation.cpp  EcoCrop.cpp  ScenGen.cpp
src/modules/esm/: CMakeLists.txt  Carbon.cpp  CoastalVuln.cpp  EcosystemServices.cpp  Pollination.cpp  Sediment.cpp  SoilSalinity.cpp  WaveEnergy.cpp
src/modules/etm/: BioClimVars.cpp  CMakeLists.txt  Cca.cpp  Deseason.cpp  Eot.cpp  Hants.cpp  HarmonicReg.cpp  Mlr.cpp  Modwt.cpp  Mssa.cpp  MultiReg.cpp  SeasonalDecomp.cpp  Sta.cpp  TAggregate.cpp  TCor.cpp  TDiff.cpp  TimeSeriesStats.cpp  TrendAnalysis.cpp
src/modules/gis/: Allocate.cpp  ArcIdris.cpp  ArcRaster.cpp  Area.cpp  AreaFilter.cpp  AsdIdrisi.cpp  Aspect.cpp  Assign.cpp  Autocorr.cpp  Avl2Csv.cpp  Bayes.cpp  Belief.cpp  BmpIdris.cpp  Breakout.cpp  Buffer.cpp  CMakeLists.txt  CRatio.cpp  CVA.cpp  CellAtom.cpp  Center.cpp  CochranOrcutt.cpp  CollectionEditor.cpp  Concat.cpp  Consensus.cpp  Contour.cpp  Contract.cpp  Convert.cpp  Correlate.cpp  Cost.cpp  CostGrow.cpp  Count.cpp  CreateTsf.cpp  Crlf.cpp  Crosstab.cpp  Csv2Avl.cpp  Curvature.cpp  DbWorkshop.cpp  Decomp.cpp  DemIdris.cpp  DigitalGlobe.cpp  (+147 more)
src/modules/hbm/: BiodiversityMetrics.cpp  CMakeLists.txt  Habitat.cpp  HabitatAssessment.cpp  Jaccard.cpp  OverlapUse.cpp  SimWeight.cpp  SpeciesDistribution.cpp
src/modules/imgproc/: AtmosC.cpp  BayClass.cpp  BelCalc.cpp  BelClass.cpp  CMakeLists.txt  Calibrate.cpp  CanComp.cpp  CanCor.cpp  ChainCluster.cpp  Cluster.cpp  ColSpace.cpp  Composite.cpp  Cta.cpp  DecisionForest.cpp  Denoise.cpp  Destripe.cpp  DrawFilt.cpp  EndSig.cpp  FiltFq.cpp  FiltFreq.cpp  Fisher.cpp  Fourier.cpp  FreqDist.cpp  FuzClass.cpp  FuzSig.cpp  FuzzyArtMap.cpp  Harden.cpp  HyperAbsorb.cpp  HyperAutoSig.cpp  HyperMin.cpp  HyperOsp.cpp  HyperSam.cpp  HyperSig.cpp  HyperUnmix.cpp  HyperUsp.cpp  Illuminate.cpp  IsoClust.cpp  Isodata.cpp  Kmeans.cpp  Knn.cpp  (+42 more)
src/modules/lcm/: CMakeLists.txt  CellularAutomata.cpp  ChangeAnalysis.cpp  ChgAlloc.cpp  FuzzyArtMap2.cpp  LogisticReg.cpp  Markov2.cpp  MarkovChain.cpp  Prediction.cpp  TransitionPotential.cpp
tests/: CMakeLists.txt  comprehensive_test.cpp  smoke_test.cpp  test_io.cpp  test_raster.cpp  test_wizards.cpp
