# GIS Analysis modules
add_subdirectory(gis)

# Image Processing modules
add_subdirectory(imgproc)

# Land Change Modeler
add_subdirectory(lcm)

# Earth Trends Modeler
add_subdirectory(etm)

# Habitat & Biodiversity Modeler
add_subdirectory(hbm)

# Ecosystem Services Modeler
add_subdirectory(esm)

# Climate Change Adaptation Modeler
add_subdirectory(ccam)
