add_library(aplaceholder_gis STATIC
    Overlay.cpp
    Distance.cpp
    Cost.cpp
    Surface.cpp
    Reclass.cpp
    Crosstab.cpp
    Area.cpp
    Filter.cpp
    Autocorr.cpp
    Mce.cpp
    Mola.cpp
    Fuzzy.cpp
    Weight.cpp
    Assign.cpp
    Scalar.cpp
    ErrMat.cpp
    Allocate.cpp
    VarCost.cpp
    Disperse.cpp
    TopRank.cpp
    Rank.cpp
    Sample.cpp
    Random.cpp
    Bayes.cpp
    Belief.cpp
    PClass.cpp
    Query.cpp
    Extract.cpp
    Profile.cpp
    Histo.cpp
    Resultant.cpp
    Interpol.cpp
    Intercon.cpp
    Tin.cpp
    TinSurf.cpp
    Thiessen.cpp
    Decomp.cpp
    TinPrep.cpp
    Generalize.cpp
    LogicAnd.cpp
    LogicOr.cpp
    LogicNot.cpp
    LogicXor.cpp
    Normalize.cpp
    Standard.cpp
    Contour.cpp
    Buffer.cpp
    Expand.cpp
    Contract.cpp
    Flip.cpp
    Resample.cpp
    Viewshed.cpp
    PitRemoval.cpp
    RasterToPoint.cpp
    PointToRaster.cpp
    Concat.cpp
    Separate.cpp
    Convert.cpp
    MetaUpdate.cpp
    Relocate.cpp
    Transform.cpp
    Project.cpp
    Highlight.cpp
    Group.cpp
    Split.cpp
    Flow.cpp
    Runoff.cpp
    Rusle.cpp
    SlopeLength.cpp
    Pathway.cpp
    Watershed.cpp
    CostGrow.cpp
    SpDist.cpp
    Facet.cpp
    WaterIndex.cpp
    Perim.cpp
    Quadrat.cpp
    Correlate.cpp
    Regress.cpp
    Scatter.cpp
    Sensitivity.cpp
    Validate.cpp
    Roc.cpp
    Kendall.cpp
    DurbinWatson.cpp
    CochranOrcutt.cpp
    CVA.cpp
    ImageDiff.cpp
    ImageRatio.cpp
    Consensus.cpp
    Window.cpp
    Trend.cpp
    Hillshade.cpp
)

target_link_libraries(aplaceholder_gis PUBLIC
    aplaceholder_core
    aplaceholder_io
)
