add_library(aplaceholder_gis STATIC
    Overlay.cpp
    Distance.cpp
    Cost.cpp
    Surface.cpp
    Reclass.cpp
    Crosstab.cpp
    Area.cpp
    Filter.cpp
    Autocorr.cpp
    Mce.cpp
    Mola.cpp
    Fuzzy.cpp
    Weight.cpp
    Assign.cpp
    Scalar.cpp
    ErrMat.cpp
    Allocate.cpp
    VarCost.cpp
    Disperse.cpp
    TopRank.cpp
    Rank.cpp
    Sample.cpp
    Random.cpp
    Bayes.cpp
    Belief.cpp
    PClass.cpp
    Query.cpp
    Extract.cpp
    Profile.cpp
    Histo.cpp
    Resultant.cpp
    Interpol.cpp
    Intercon.cpp
    Tin.cpp
    TinSurf.cpp
    Thiessen.cpp
    Decomp.cpp
    TinPrep.cpp
    Generalize.cpp
    LogicAnd.cpp
    LogicOr.cpp
    LogicNot.cpp
    LogicXor.cpp
    Normalize.cpp
    Standard.cpp
    Contour.cpp
    Buffer.cpp
    Expand.cpp
    Contract.cpp
    Flip.cpp
    Resample.cpp
    Viewshed.cpp
    PitRemoval.cpp
    RasterToPoint.cpp
    PointToRaster.cpp
    Concat.cpp
    Separate.cpp
    Convert.cpp
    MetaUpdate.cpp
    Relocate.cpp
    Transform.cpp
    Project.cpp
    Highlight.cpp
    Group.cpp
    Split.cpp
    Flow.cpp
    Runoff.cpp
    Rusle.cpp
    SlopeLength.cpp
    Pathway.cpp
    Watershed.cpp
    CostGrow.cpp
    SpDist.cpp
    Facet.cpp
    WaterIndex.cpp
    Perim.cpp
    Quadrat.cpp
    Correlate.cpp
    Regress.cpp
    Scatter.cpp
    Sensitivity.cpp
    Validate.cpp
    Roc.cpp
    Kendall.cpp
    DurbinWatson.cpp
    CochranOrcutt.cpp
    CVA.cpp
    ImageDiff.cpp
    ImageRatio.cpp
    Consensus.cpp
    Window.cpp
    Trend.cpp
    Hillshade.cpp
    # New context/spatial operator modules
    Pattern.cpp
    AreaFilter.cpp
    Hinterland.cpp
    PixelLocation.cpp
    # Topographic modules
    Aspect.cpp
    Curvature.cpp
    Fractal.cpp
    Toposhape.cpp
    Sedimentation.cpp
    # Statistics modules
    Count.cpp
    Center.cpp
    CRatio.cpp
    KnnRegress.cpp
    # Decision/change modules
    MdChoice.cpp
    PCorBinary.cpp
    StChoice.cpp
    Disaggregate.cpp
    CellAtom.cpp
    GeoMod.cpp
    KendallTau.cpp
    # Data entry/utility modules
    Initial.cpp
    Update.cpp
    UtmRef.cpp
    Breakout.cpp
    Logic.cpp
    Texture.cpp
    # Format converters
    ArcIdris.cpp
    ArcRaster.cpp
    AsdIdrisi.cpp
    Avl2Csv.cpp
    BmpIdris.cpp
    Crlf.cpp
    Csv2Avl.cpp
    DemIdris.cpp
    DigitalGlobe.cpp
    Dlg.cpp
    DxfIdris.cpp
    EcwIdris.cpp
    EnviIdris.cpp
    ErdIdris.cpp
    ErmIdris.cpp
    GacpIdrisi.cpp
    GenericRaster.cpp
    GeoEye.cpp
    GeoTiff.cpp
    GpcIdrisi.cpp
    GrassIdr.cpp
    HdfEos.cpp
    IdrisiConv.cpp
    Ikonos.cpp
    JpgIdris.cpp
    KmlIdris.cpp
    Landsat.cpp
    MifIdris.cpp
    ModisConv.cpp
    ModisQc.cpp
    NanFix.cpp
    Ndvi3g.cpp
    NetCdf.cpp
    PsdIdrisi.cpp
    QuickBird.cpp
    Radarsat.cpp
    SacIdris.cpp
    Sdts.cpp
    Sentinel.cpp
    ShapeIdr.cpp
    SplusIdris.cpp
    Spot.cpp
    SrfIdris.cpp
    SstIdris.cpp
    StatIdris.cpp
    Var2Fix.cpp
    Vxp.cpp
    WorldView.cpp
    XyzIdris.cpp
    XyzMonthly.cpp
    # Vector conversion
    LinToPnt.cpp
    Poly2Line.cpp
    RasterVector.cpp
    # UI/system modules
    CollectionEditor.cpp
    CreateTsf.cpp
    DbWorkshop.cpp
    Display.cpp
    EditModule.cpp
    FlyThrough.cpp
    MacroModeler.cpp
    MediaViewer.cpp
    PhotoLayer.cpp
    PythonModule.cpp
    RunMacro.cpp
    Sdm2.cpp
    SymbolWorkshop.cpp
    VField.cpp
)

target_link_libraries(aplaceholder_gis PUBLIC
    aplaceholder_core
    aplaceholder_io
)
