add_library(aplaceholder_imgproc STATIC
    Pca.cpp
    MaxLike.cpp
    MinDist.cpp
    Cluster.cpp
    Stretch.cpp
    Ndvi.cpp
    Composite.cpp
    Segment.cpp
    MakeSig.cpp
    TassCap.cpp
    Radiance.cpp
    AtmosC.cpp
    Destripe.cpp
    Mosaic.cpp
    Fourier.cpp
    FiltFreq.cpp
    Piped.cpp
    IsoClust.cpp
    VegIndex.cpp
    ColSpace.cpp
    Unmix.cpp
    Harden.cpp
    SegClass.cpp
    SegTrain.cpp
    DrawFilt.cpp
    FreqDist.cpp
    FuzzyArtMap.cpp
    Segmentation.cpp
    HyperSam.cpp
    HyperMin.cpp
    HyperUnmix.cpp
    HyperOsp.cpp
    HyperUsp.cpp
    HyperAbsorb.cpp
    HyperAutoSig.cpp
    HyperSig.cpp
    EndSig.cpp
    ZeroPad.cpp
    BelCalc.cpp
    FuzSig.cpp
    SigComp.cpp
    SepSig.cpp
    Fisher.cpp
    MahalClass.cpp
    BayClass.cpp
    FuzClass.cpp
    BelClass.cpp
    Calibrate.cpp
    MaxSet.cpp
    Svm.cpp
    Mlp.cpp
    Knn.cpp
    Rbfnn.cpp
    Som.cpp
    Cta.cpp
    DecisionForest.cpp
    Isodata.cpp
    Kmeans.cpp
    MultiLogisticReg.cpp
    PanSharpen.cpp
    Denoise.cpp
    Illuminate.cpp
    Ortho.cpp
    Pyramid.cpp
    SubSample.cpp
    Mnf.cpp
    NdviComp.cpp
    Screen.cpp
    SoilSalinity2.cpp
    Thermal.cpp
    SnowIndex.cpp
    ChainCluster.cpp
    PriorCorrect.cpp
    Purify.cpp
    LandsatUpsample.cpp
    LocalAffine.cpp
    CanComp.cpp
    CanCor.cpp
    Tfa.cpp
    FiltFq.cpp
)

target_link_libraries(aplaceholder_imgproc PUBLIC
    aplaceholder_core
    aplaceholder_io
)
